# daisy

./: .gitignore  AUTHORS  CMakeLists.txt  scatch.vala
data/: com.github.keithnyc.daisy.appdata.xml  com.github.keithnyc.daisy.desktop
debian/: changelog  control  copyright
po/: com.github.keithnyc.daisy.pot
src/: Constants.vala  Daisy.vala  DaisyWindow.vala  EndPoint.vala  EndPointListManager.vala  ListBox.vala  ListBoxRow.vala  StackManager.vala  Utils.vala  daisy  daisy.vala
src/Components/: HeaderBar.vala
src/Views/: EndPointView.vala
